hphp/test/zend/bad/ns_073.php
<?php

namespace foo;

$x = function (\stdclass $x = NULL) { 
	var_dump($x);	
};

$x(NULL);
$x(new \stdclass);

?>